[package]
name = "countries"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
