[package]
name = "countries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
